Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_extracted_567_altergo.txt
[kernel] Parsing extracted_567_rte.c (with preprocessing)
[kernel] extracted_567_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing extracted_567.c (with preprocessing)
  3     /* Generated by Frama-C */
[kernel] Frama-C aborted: invalid user input.
